Fix : SpringSecurity를 활용한 토큰 생성

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -20,6 +20,10 @@ spring:
     init:
       mode: always
 
+springboot:
+  jwt:
+    secret: test123!@#
+
 logging:
   level:
     org.hibernate.SQL: debug
