--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -23,4 +23,5 @@ spring:
 logging:
   level:
     org.hibernate.SQL: debug
-telegram-key: 5809477338:AAFJXWDvGef5QynoEW40aUE-IK5Bt8sfk
+
+telegram-key: "5810579378:AAGNSVQz1Mzn1FjMkBuL1x-5UUz9u-jXdXc"
