Fix: application-eun.yml 수정

--- a/src/main/resources/application-eun.yml
+++ b/src/main/resources/application-eun.yml
@@ -2,7 +2,7 @@ spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://10.41.82.229:3306/ithermes?useSSL=false&characterEncoding=UTF-8&serverTimezone=UTC&allowPublicKeyRetrieval=true
-    username: ithermes
+    username: root
     password: ithermes1221
 
   jpa:
