--- a/.github/workflows/seung_ci.yml
+++ b/.github/workflows/seung_ci.yml
@@ -34,3 +34,23 @@ jobs:
 
     - name: Build with Gradle
       run: ./gradlew build -x test
+      
+  push_to_registry:
+    name: Push Docker image to Docker Hub
+    runs-on: ubuntu-latest
+    steps:
+      - name: Check out the repo
+        uses: actions/checkout@v3
+      
+      - name: Log in to Docker Hub
+        uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
+        with:
+          username: ${{ secrets.SEUNGKI_DOCKER_USERNAME }}
+          password: ${{ secrets.SEUNGKI_DOCKER_PASSWORD }}
+      
+      - name: Build and push
+        id: docker_build
+        uses: docker/build-push-action@v2
+        with:
+          push: true
+          tags: skkim0832/it-hermes-server:latest
