--- a/.github/workflows/seung_ci.yml
+++ b/.github/workflows/seung_ci.yml
@@ -34,23 +34,23 @@ jobs:
 
     - name: Build with Gradle
       run: ./gradlew build -x test
-      
-  push_to_registry:
-    name: Push Docker image to Docker Hub
+
+  docker:
+    name: Deploy Docker Image
     runs-on: ubuntu-latest
+    needs: build
+    env:
+      REPO: skkim0832/it-hermes-server
     steps:
-      - name: Check out the repo
-        uses: actions/checkout@v3
-      
-      - name: Log in to Docker Hub
-        uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
-        with:
-          username: ${{ secrets.SEUNGKI_DOCKER_USERNAME }}
-          password: ${{ secrets.SEUNGKI_DOCKER_PASSWORD }}
-      
-      - name: Build and push
-        id: docker_build
-        uses: docker/build-push-action@v2
-        with:
-          push: true
-          tags: skkim0832/it-hermes-server:latest
+    - uses: actions/checkout@v2
+    - name: Retrieve built
+      uses: actions/download-artifact@v2
+      with:
+        name: build-artifact
+        path: build
+    - name: Docker Hub Sign-in
+      run: docker login -u ${{ secrets.SEUNGKI_DOCKER_USERNAME }} -p ${{ secrets.SEUNGKI_DOCKER_PASSWORD }}
+    - name: Building Docker Image
+      run: docker build -t $REPO:latest -t $REPO:${GITHUB_RUN_ID} .
+    - name: Publish Docker Image
+      run: docker push $REPO
