--- a/.github/workflows/seung_ci.yml
+++ b/.github/workflows/seung_ci.yml
@@ -35,22 +35,9 @@ jobs:
     - name: Build with Gradle
       run: ./gradlew build -x test
 
-  docker:
-    name: Deploy Docker Image
-    runs-on: ubuntu-latest
-    needs: build
-    env:
-      REPO: skkim0832/it-hermes-server
-    steps:
-    - uses: actions/checkout@v2
-    - name: Retrieve built
-      uses: actions/download-artifact@v2
-      with:
-        name: build-artifact
-        path: build
-    - name: Docker Hub Sign-in
-      run: docker login -u ${{ secrets.SEUNGKI_DOCKER_USERNAME }} -p ${{ secrets.SEUNGKI_DOCKER_PASSWORD }}
-    - name: Building Docker Image
-      run: docker build -t $REPO:latest -t $REPO:${GITHUB_RUN_ID} .
-    - name: Publish Docker Image
-      run: docker push $REPO
+    - name: Docker build & push to prod
+      run: |
+          docker login -u ${{ secrets.SEUNGKI_DOCKER_USERNAME }} -p ${{ secrets.SEUNGKI_DOCKER_PASSWORD }}
+          docker build -t it-hermes-server .
+          docker tag it-hermes-server skkim0832/it-hermes-server
+          docker push skkim0832/it-hermes-server
