--- a/.github/workflows/seung_ci.yml
+++ b/.github/workflows/seung_ci.yml
@@ -32,13 +32,20 @@ jobs:
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
 
-    - name: Build with Gradle
-      run: | 
-          ./gradlew build -x test
-          docker build -t it-hermes-server .
+  build_and_push:
+    name: Build & Push to DockerHub
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - name: Login to DockerHub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.SEUNGKI_DOCKER_USERNAME }}
+          password: ${{ secrets.SEUNGKI_DOCKER_PASSWORD }}
 
-    - name: Docker build & push to prod
-      run: |
-          docker login -u ${{ secrets.SEUNGKI_DOCKER_USERNAME }} -p ${{ secrets.SEUNGKI_DOCKER_PASSWORD }}
-          docker tag it-hermes-server skkim0832/it-hermes-server
-          docker push skkim0832/it-hermes-server
+      - name: Docker Build and Push to DockerHub
+        uses: docker/build-push-action@v3
+        with:
+          context: .
+          push: true
+          tags: skkim0832/it-hermes-server:latest
