--- a/.github/workflows/seung_ci.yml
+++ b/.github/workflows/seung_ci.yml
@@ -32,20 +32,11 @@ jobs:
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
 
-  build_and_push:
-    name: Build & Push to DockerHub
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - name: Login to DockerHub
-        uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.SEUNGKI_DOCKER_USERNAME }}
-          password: ${{ secrets.SEUNGKI_DOCKER_PASSWORD }}
-
-      - name: Docker Build and Push to DockerHub
-        uses: docker/build-push-action@v3
-        with:
-          context: .
-          push: true
-          tags: skkim0832/it-hermes-server:latest
+    - name: Docker Hub login
+      uses: docker/login-action@v2
+      with:
+        username: ${{ secrets.SEUNGKI_DOCKER_USERNAME }}
+        password: ${{ secrets.SEUNGKI_DOCKER_PASSWORD }}
+        
+    - name: Docker Hub push
+      run: docker push skkim0832/it-hermes-server
