--- a/.github/workflows/seung_ci.yml
+++ b/.github/workflows/seung_ci.yml
@@ -31,7 +31,13 @@ jobs:
 
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
+      
+    - name: 스프링부트 애플리케이션 빌드
+      run: ./gradlew build
 
+    - name: 도커 이미지 빌드
+      run: docker build -t skkim0832/it-hermes-server .
+        
     - name: Docker Hub login
       uses: docker/login-action@v2
       with:
