--- a/.github/workflows/seung_ci.yml
+++ b/.github/workflows/seung_ci.yml
@@ -33,7 +33,7 @@ jobs:
       run: chmod +x gradlew
       
     - name: 스프링부트 애플리케이션 빌드
-      run: ./gradlew build
+      run: ./gradlew build -x test
 
     - name: 도커 이미지 빌드
       run: docker build -t skkim0832/it-hermes-server .
