--- a/.github/workflows/seung_ci.yml
+++ b/.github/workflows/seung_ci.yml
@@ -46,3 +46,13 @@ jobs:
         
     - name: Docker Hub push
       run: docker push skkim0832/it-hermes-server
+      
+    - name: connect seung-server and hermes-server-cd shell script
+      uses: appleboy/ssh-action@v0.1.4
+      with:
+        host: ${{ secrets.SEUNGKI_SERVER_PORTFOWARDING_IP }}
+        username: ${{ secrets.SEUNGKI_SERVER_USERNAME }}
+        password: ${{ secrets.SEUNGKI_SERVER_PASSWORD }}
+        port: ${{ secrets.SEUNGKI_SERVER_PORT }}
+        script: |
+          docker pull skkim0832/it-hermes-server
