--- a/.github/workflows/seung_ci.yml
+++ b/.github/workflows/seung_ci.yml
@@ -53,6 +53,5 @@ jobs:
         host: ${{ secrets.SEUNGKI_SERVER_PORTFOWARDING_IP }}
         username: ${{ secrets.SEUNGKI_SERVER_USERNAME }}
         password: ${{ secrets.SEUNGKI_SERVER_PASSWORD }}
-        port: ${{ secrets.SEUNGKI_SERVER_PORT }}
-        script: |
-          docker pull skkim0832/it-hermes-server
+        port: ${{ secrets.SEUNGKI_SERVER_PORTFORWARDING_PORT }}
+        script: echo "hello"
