--- a/.github/workflows/seung_ci.yml
+++ b/.github/workflows/seung_ci.yml
@@ -54,4 +54,5 @@ jobs:
         username: ${{ secrets.SEUNGKI_SERVER_USERNAME }}
         password: ${{ secrets.SEUNGKI_SERVER_PASSWORD }}
         port: ${{ secrets.SEUNGKI_SERVER_PORTFORWARDING_PORT }}
-        script: docker pull skkim0832/it-hermes-server
+        script: | 
+              docker pull skkim0832/it-hermes-server
