--- a/.github/workflows/seung_ci.yml
+++ b/.github/workflows/seung_ci.yml
@@ -29,27 +29,17 @@ jobs:
       with:
         java-version: 17
 
-    - name: MYSQL 세팅
-      uses: samin/mysql-action@v1
-      with:
-        host port: 3307 # Optional, default value is 3306. The port of host
-        container port: 3307 # Optional, default value is 3306. The port of container
-        character set server: 'utf8' # Optional, default value is 'utf8mb4'. The '--character-set-server' option for mysqld
-        collation server: 'utf8_general_ci' # Optional, default value is 'utf8mb4_general_ci'. The '--collation-server' option for mysqld
-        mysql version: '8.0' # Optional, default value is "latest". The version of the MySQL
-        mysql database: 'test' # Optional, default value is "test". The specified database which will be create
-        mysql root password: 'test1234' # Required if "mysql user" is empty, default is empty. The root superuser password
-        mysql user: 'test' # Required if "mysql root password" is empty, default is empty. The superuser for the specified database. Of course you can use secrets, too
-        mysql password: 'test1234' # Required if "mysql user" exists. The password for the "mysql user"
-
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
-      
+
+    - name: 테스트코드 확인
+      uses: EnricoMi/publish-unit-test-result-action@v1
+      if: ${{ always() }}
+      with:
+        files: build/test-results/**/*.xml
+        
     - name: 스프링부트 애플리케이션 빌드
       run: ./gradlew build -x test
-      
-    - name: 테스트코드 확인
-      run: ./gradlew test
       
     - name: 도커 이미지 빌드
       run: docker build -t skkim0832/it-hermes-server . -f Dockerfile-seung
