--- a/.github/workflows/seung_ci.yml
+++ b/.github/workflows/seung_ci.yml
@@ -33,10 +33,8 @@ jobs:
       run: chmod +x gradlew
 
     - name: 테스트코드 확인
-      uses: EnricoMi/publish-unit-test-result-action@v1
-      if: ${{ always() }}
-      with:
-        files: build/test-results/**/*.xml
+      run: ./gradlew --info test
+
         
     - name: 스프링부트 애플리케이션 빌드
       run: ./gradlew build -x test
