--- a/build.gradle
+++ b/build.gradle
@@ -37,7 +37,7 @@ dependencies {
 	implementation 'javax.xml.bind:jaxb-api:2.3.1'
 	// https://mvnrepository.com/artifact/org.springframework.security/spring-security-test
 	testImplementation 'org.springframework.security:spring-security-test'
-	runtimeOnly 'com.h2database:h2'
+	testImplementation 'com.h2database:h2'
 
 }
 
