--- a/.github/workflows/seung_ci.yml
+++ b/.github/workflows/seung_ci.yml
@@ -43,27 +43,27 @@ jobs:
 
     - name: 스프링부트 애플리케이션 빌드
       run: ./gradlew build -x test
-      
-    - name: 도커 이미지 빌드
-      run: docker build -t skkim0832/it-hermes-server . -f Dockerfile-seung
+# 젠킨스로 변경테스트      
+#     - name: 도커 이미지 빌드
+#       run: docker build -t skkim0832/it-hermes-server . -f Dockerfile-seung
         
-    - name: Docker Hub login
-      uses: docker/login-action@v2
-      with:
-        username: ${{ secrets.SEUNGKI_DOCKER_USERNAME }}
-        password: ${{ secrets.SEUNGKI_DOCKER_PASSWORD }}
+#     - name: Docker Hub login
+#       uses: docker/login-action@v2
+#       with:
+#         username: ${{ secrets.SEUNGKI_DOCKER_USERNAME }}
+#         password: ${{ secrets.SEUNGKI_DOCKER_PASSWORD }}
         
-    - name: Docker Hub push
-      run: docker push skkim0832/it-hermes-server
+#     - name: Docker Hub push
+#       run: docker push skkim0832/it-hermes-server
       
-    - name: ssh seung-server and docker container start
-      uses: appleboy/ssh-action@v0.1.4
-      with:
-        host: ${{ secrets.SEUNGKI_SERVER_PORTFOWARDING_IP }}
-        username: ${{ secrets.SEUNGKI_SERVER_USERNAME }}
-        password: ${{ secrets.SEUNGKI_SERVER_PASSWORD }}
-        port: ${{ secrets.SEUNGKI_SERVER_PORTFORWARDING_PORT }}
-        script: | 
-              docker rmi -f skkim0832/it-hermes-server
-              docker pull skkim0832/it-hermes-server
-              nohup docker run -p 8080:8080 skkim0832/it-hermes-server &
+#     - name: ssh seung-server and docker container start
+#       uses: appleboy/ssh-action@v0.1.4
+#       with:
+#         host: ${{ secrets.SEUNGKI_SERVER_PORTFOWARDING_IP }}
+#         username: ${{ secrets.SEUNGKI_SERVER_USERNAME }}
+#         password: ${{ secrets.SEUNGKI_SERVER_PASSWORD }}
+#         port: ${{ secrets.SEUNGKI_SERVER_PORTFORWARDING_PORT }}
+#         script: | 
+#               docker rmi -f skkim0832/it-hermes-server
+#               docker pull skkim0832/it-hermes-server
+#               nohup docker run -p 8080:8080 skkim0832/it-hermes-server &
