--- a/.github/workflows/seung_ci.yml
+++ b/.github/workflows/seung_ci.yml
@@ -38,8 +38,5 @@ jobs:
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
 
-    - name: 스프링 부트와 테스트코드 확인
+    - name: 스프링 부트 애플리케이션 코드, 테스트코드 확인
       run: ./gradlew clean build
-
-    - name: 스프링부트 애플리케이션 빌드
-      run: ./gradlew build -x test
