Fix : github Action CI 수정 (#51)

--- a/.github/workflows/seung_ci.yml
+++ b/.github/workflows/seung_ci.yml
@@ -41,8 +41,10 @@ jobs:
     - name: 스프링 부트 애플리케이션 코드, 테스트코드 확인
       run: ./gradlew clean build
 
-    - name: Publish Unit Test Results
+    - name: Publish Test Results
       uses: EnricoMi/publish-unit-test-result-action@v2
-      if: ${{ always() }}
+      if: always()
       with:
-        files: build/test-results/**/*.xml
+        files: |
+          test-results/**/*.xml
+          test-results/**/*.trx
