--- a/.github/workflows/seung_ci.yml
+++ b/.github/workflows/seung_ci.yml
@@ -41,8 +41,13 @@ jobs:
     - name: 스프링 부트 애플리케이션 코드, 테스트코드 확인
       run: ./gradlew clean build
 
-    - name: publish unit test results
+    # Gradle Test를 실행한다
+    - name: Test with Gradle
+      run: ./gradlew --info test
+
+      # Test 후 Report 생성
+    - name: Publish Test Results
       uses: EnricoMi/publish-unit-test-result-action@v2
       if: always()
       with:
-        files: backend/build/test-results/test/TEST-*.xml
+        junit_files: '**/build/test-results/test/TEST-*.xml'
