--- a/.github/workflows/seung_ci.yml
+++ b/.github/workflows/seung_ci.yml
@@ -13,8 +13,8 @@ on:
   pull_request:
     branches: [ "main" ]
 
-permissions: write-all
-  contents: read
+permissions:
+  contents: read-all|write-all
 
 jobs:
   build:
