Feat : Github Action 업데이트 (#51)

--- a/.github/workflows/seung_ci.yml
+++ b/.github/workflows/seung_ci.yml
@@ -14,7 +14,8 @@ on:
     branches: [ "main" ]
 
 permissions:
-  contents: read-all|write-all
+  id-token: write
+  contents: read
 
 jobs:
   build:
