Feat : GIthub Action 수정 (#51)

--- a/.github/workflows/seung_ci.yml
+++ b/.github/workflows/seung_ci.yml
@@ -13,9 +13,7 @@ on:
   pull_request:
     branches: [ "main" ]
 
-permissions:
-  id-token: write
-  contents: read
+permissions: write-all
 
 jobs:
   build:
