Feat : Github Action 업데이트 (#51)

--- a/.github/workflows/seung_ci.yml
+++ b/.github/workflows/seung_ci.yml
@@ -13,7 +13,7 @@ on:
   pull_request:
     branches: [ "main" ]
 
-permissions: write-all and read-all
+permissions: write-all|read-all
 
 jobs:
   build:
