--- a/.github/workflows/seung_ci.yml
+++ b/.github/workflows/seung_ci.yml
@@ -32,18 +32,16 @@ jobs:
       with:
         arguments: build
         
-    - name: Grant execute permission for gradlew
+    - name: Gradlew에 권한 부여
       run: chmod +x gradlew
 
     - name: 스프링 부트 애플리케이션 코드, 테스트코드 확인
       run: ./gradlew clean build
 
-    # Gradle Test를 실행한다
-    - name: Test with Gradle
+    - name: 테스트 코드 실행
       run: ./gradlew --info test
 
-      # Test 후 Report 생성
-    - name: Publish Unit Test Results
+    - name: 테스트 결과 시각화
       uses: EnricoMi/publish-unit-test-result-action@v1
       if: ${{ always() }}
       with:
