--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -2,8 +2,8 @@ spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3307/test_schema?useSSL=false&characterEncoding=UTF-8&serverTimezone=UTC&allowPublicKeyRetrieval=true
-    username: test
-    password: test1234
+    username: ${username}
+    password: ${password}
 
   jpa:
     open-in-view: true
@@ -22,10 +22,10 @@ spring:
 
 springboot:
   jwt:
-    secret: test123!@#
+    secret: ${jwt-key}
 
 logging:
   level:
     org.hibernate.SQL: debug
 
-telegram-key: "5810579378:AAGNSVQz1Mzn1FjMkBuL1x-5UUz9u-jXdXc"
+telegram-key: ${telegram-key}
