--- a/src/main/resources/application-seung.yml
+++ b/src/main/resources/application-seung.yml
@@ -2,8 +2,8 @@ spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://10.41.4.73:3306/ithermes?useSSL=false&characterEncoding=UTF-8&serverTimezone=UTC&allowPublicKeyRetrieval=true
-    username: ${USERNAME}
-    password: ${PASSWORD}
+    username: ${datasource.username}
+    password: ${datasource.password}
 
   jpa:
     open-in-view: true
@@ -22,10 +22,10 @@ spring:
 
 springboot:
   jwt:
-    secret: ${JWT_KEY}
+    secret: ${jwt.secret}
 
 logging:
   level:
     org.hibernate.SQL: debug
 
-telegram-key: ${TELEGRAM_KEY}
+telegram-key: ${telegram.key}
