Refactor : docker file 수정

--- a/Dockerfile-seung
+++ b/Dockerfile-seung
@@ -1,5 +1,4 @@
 FROM eclipse-temurin:17-jdk-alpine
 ARG JAR_FILE_PATH=./build/libs/it-hermes-0.0.1-SNAPSHOT.jar
 COPY ${JAR_FILE_PATH} app.jar
-ENTRYPOINT ["java","-Dspring.profiles.active=seung","-jar","/app.jar"
-,"-Dspring-boot.run.arguments=--datasource.username=${DATASOURCE_USERNAME}, --datasource.password=${DATASOURCE_PASSWORD}, --jwt.secret=${JWT_SECRET}, --telegram.key=${TELEGRAM_KEY}"]
+ENTRYPOINT ["java","-Dspring.profiles.active=seung","-jar","/app.jar","-Dspring-boot.run.arguments=--datasource.username=${DATASOURCE_USERNAME}, --datasource.password=${DATASOURCE_PASSWORD}, --jwt.secret=${JWT_SECRET}, --telegram.key=${TELEGRAM_KEY}"]
