--- a/src/main/resources/application-seung.yml
+++ b/src/main/resources/application-seung.yml
@@ -2,8 +2,8 @@ spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://10.41.4.73:3306/ithermes?useSSL=false&characterEncoding=UTF-8&serverTimezone=UTC&allowPublicKeyRetrieval=true
-    username: ${datasource.username}
-    password: ${datasource.password}
+    username: ${DATASOURCE_USERNAME}
+    password: ${DATASOURCE_PASSWORD}
 
   jpa:
     open-in-view: true
@@ -22,10 +22,10 @@ spring:
 
 springboot:
   jwt:
-    secret: ${jwt.secret}
+    secret: test123!@#
 
 logging:
   level:
     org.hibernate.SQL: debug
 
-telegram-key: ${telegram.key}
+telegram-key: 5810579378:AAGNSVQz1Mzn1FjMkBuL1x-5UUz9u-jXdXc
