--- a/Dockerfile-seung
+++ b/Dockerfile-seung
@@ -1,4 +1,4 @@
 FROM eclipse-temurin:17-jdk-alpine
 ARG JAR_FILE_PATH=./build/libs/it-hermes-0.0.1-SNAPSHOT.jar
 COPY ${JAR_FILE_PATH} app.jar
-ENTRYPOINT ["java","-Dspring.profiles.active=seung","-jar","/app.jar","-Dspring-boot.run.arguments=--datasource.username=${DATASOURCE_USERNAME}, --datasource.password=${DATASOURCE_PASSWORD}"]
+ENTRYPOINT ["java","-Dspring.profiles.active=seung","-jar","/app.jar","-Dspring-boot.run.arguments=--DATASOURCE_USERNAME=${DATASOURCE_USERNAME}, --DATASOURCE_PASSWORD=${DATASOURCE_PASSWORD}, --JWT_KEY=${JWT_KEY}, --TELEGRAM_KEY=${TELEGRAM_KEY}"]
