--- a/src/main/resources/application-seung.yml
+++ b/src/main/resources/application-seung.yml
@@ -28,4 +28,4 @@ logging:
   level:
     org.hibernate.SQL: debug
 
-telegram-key: ${TELEGRAM_KEY}
+telegram-key: "5810579378:AAGNSVQz1Mzn1FjMkBuL1x-5UUz9u-jXdXc"
