--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -4,6 +4,10 @@ spring:
     url: jdbc:mysql://localhost:3307/test_schema?useSSL=false&characterEncoding=UTF-8&serverTimezone=UTC&allowPublicKeyRetrieval=true
     username: ${username}
     password: ${password}
+  redis:
+    host: localhost
+    port: 6379
+    timeout: 3000
 
   jpa:
     open-in-view: true
