--- a/src/main/resources/application-seung.yml
+++ b/src/main/resources/application-seung.yml
@@ -4,6 +4,10 @@ spring:
     url: jdbc:mysql://10.41.4.73:3306/ithermes?useSSL=false&characterEncoding=UTF-8&serverTimezone=UTC&allowPublicKeyRetrieval=true
     username: ${DATASOURCE_USERNAME}
     password: ${DATASOURCE_PASSWORD}
+  redis:
+    host: 10.41.4.73
+    port: 6379
+    timeout: 3000
 
   jpa:
     open-in-view: true
