--- a/src/main/resources/application-eun.yml
+++ b/src/main/resources/application-eun.yml
@@ -5,9 +5,9 @@ spring:
     username: root
     password: ${PASSWORD}
   redis:
-    host: 10.41.82.229
-    port: 6379
-    timeout: 3000
+    hostName: 10.41.82.229
+    portNumber: 6379
+    timeoutDuration: 3000
 
   jpa:
     open-in-view: true
