--- a/build.gradle
+++ b/build.gradle
@@ -40,7 +40,10 @@ dependencies {
 	testImplementation 'com.h2database:h2'
 	implementation 'org.springframework.boot:spring-boot-starter-cache'
 	implementation 'net.sf.ehcache:ehcache:2.10.3'
-	implementation 'org.springframework.boot:spring-boot-starter-data-redis:2.7.2'
+	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+	// https://mvnrepository.com/artifact/redis.clients/jedis
+	implementation 'redis.clients:jedis'
+
 }
 
 tasks.named('test') {
