Feat: ElasticSearch 연동 추가

--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -29,5 +29,6 @@ springboot:
 logging:
   level:
     org.hibernate.SQL: false
+    org.springframework.data.elasticsearch.client.WIRE: TRACE
 
 telegram-key: ${telegram-key}
