Refactor : 엘라스틱서치 설정 #61

--- a/src/main/resources/application-eun.yml
+++ b/src/main/resources/application-eun.yml
@@ -6,6 +6,9 @@ spring:
     password: ${PASSWORD}
   redis:
     ipAddress: 10.41.82.229
+  elasticSearch:
+    ipAddress: 10.41.82.229
+    port: 9200
 
   jpa:
     open-in-view: true
@@ -29,5 +32,6 @@ springboot:
 logging:
   level:
     org.hibernate.SQL: debug
+    springframework.data.elasticsearch.client.WIRE: TRACE
 
 telegram-key: ${TELEGRAM_KEY}
