--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -31,7 +31,7 @@ springboot:
 
 logging:
   level:
-    org.hibernate.SQL: false
-    org.springframework.data.elasticsearch.client.WIRE: TRACE
+    org.hibernate.SQL: debug
+    springframework.data.elasticsearch.client.WIRE: TRACE
 
 telegram-key: ${telegram-key}
