--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -9,6 +9,11 @@ spring:
   elasticSearch:
     ipAddress: localhost
     port: 9200
+  rabbitmq:
+    host: localhost
+    port: 5672
+    username: guest
+    password: guest
 
   jpa:
     open-in-view: true
