--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -4,7 +4,8 @@ spring:
     url: jdbc:h2:mem:hermes;MODE=MYSQL
     username: sa
     password:
-
+  redis:
+    ipAddress: localhost
   h2:
     console:
       enabled: true
